@@ -11,3 +11,4 @@
 target=android-18
 android.library.reference.1=../../ActionBarSherlock/actionbarsherlock
 android.library.reference.2=../../android-menudrawer/menudrawer
+android.library.reference.3=../../StandOut/library
